--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "supervisor",
-  "version": "0.0.1",
+  "name": "actionstack",
+  "version": "1.0.1",
   "peerDependencies": {
     "@angular/common": "^16.2.0",
     "@angular/core": "^16.2.0"
