--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
     "target": "ES2022",
     "module": "ES2022",
     "paths": {
-      "supervisor": [
-        "./dist/supervisor",
-        "./projects/supervisor/src/public-api.ts"
+      "actionstack": [
+        "./dist/actionstack",
+        "./projects/actionstack/src/public-api.ts"
       ]
     },
     "useDefineForClassFields": false,
