removed slices from dependencies

--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "actionstack",
+  "name": "@oleksii-shepel/actionstack",
   "version": "1.0.1",
   "peerDependencies": {
     "@angular/common": "^16.2.0",
