inject and eject dependencies methods support nested objects

--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -31,5 +31,5 @@
   "bugs": {
     "url": "https://github.com/oleksii-shepel/angular-actionstack/issues"
   },
-  "homepage": "https://github.com/oleksii-shepel/angular-actionstack#readme"
+  "homepage": "https://actionstack-21598.web.app"
 }
