--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -31,5 +31,5 @@
   "bugs": {
     "url": "https://github.com/actioncrew/actionstack/issues"
   },
-  "homepage": "https://actionstacklib.web.app"
+  "homepage": "https://actionstack.vercel.app"
 }
