--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "actionstack",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,9 +18,6 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "redux-logger": "^3.0.6",
-    "redux-observable": "^3.0.0-rc.2",
-    "redux-thunk": "^3.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -29,6 +26,7 @@
     "@angular-devkit/build-angular": "^16.2.11",
     "@angular/cli": "~16.2.2",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/deep-diff": "^1.0.5",
     "@types/jasmine": "~4.3.0",
     "@types/redux-logger": "^3.0.12",
     "jasmine-core": "~4.6.0",
