--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@actioncrew/actionstack",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "State management library",
   "license": "MIT",
   "keywords": [
@@ -15,8 +15,7 @@
   "peerDependencies": {
     "@angular/core": ">=14.0.0",
     "@angular/forms": ">=14.0.0",
-    "rxjs": ">=7.5.0",
-    "deep-diff": ">=1.0.2"
+    "rxjs": ">=7.5.0"
   },
   "devDependencies": {
     "tslib": ">=2.3.0"
