--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@actioncrew/actionstack",
   "version": "1.0.13",
-  "description": "State management library",
+  "description": "State management library [Black Edition]",
   "license": "MIT",
   "keywords": [
-    "RxJS",
+    "no RxJS",
     "ActionStack",
     "NgRx",
     "Redux",
     "Angular",
     "state management",
-    "store"
+    "store",
+    "minified",
+    "well-tuned"
   ],
   "peerDependencies": {
     "@angular/core": ">=14.0.0",
