--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "actionstack",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,7 +21,8 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.11",
