--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@actioncrew/actionstack",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "State management library [Black Edition]",
   "license": "MIT",
   "keywords": [
@@ -16,7 +16,7 @@
   ],
   "peerDependencies": {
     "@angular/core": ">=14.0.0",
-    "@angular/forms": ">=14.0.0"
+    "rxjs": ">=7.5.0"
   },
   "devDependencies": {
     "tslib": ">=2.3.0"
