--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "minify": "node terser.mjs",
-    "bundle": "dts-bundle --name @actioncrew/actionstack --main ./dist/actionstack/public-api.d.ts && dts-bundle --name @actioncrew/actionstack/tools --main ./dist/actionstack/tools/public-api.d.ts && npm run minify"
+    "bundle": "dts-bundle --name @actioncrew/actionstack --main ./dist/actionstack/public-api.d.ts --outputAsModuleFolder && dts-bundle --name @actioncrew/actionstack/tools --main ./dist/actionstack/tools/public-api.d.ts --outputAsModuleFolder && npm run minify"
   },
   "private": true,
   "dependencies": {
