--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "minify": "node terser.mjs",
+    "minify": "node terser.mjs"
   },
   "private": true,
   "dependencies": {
