--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@actioncrew/actionstack",
-  "version": "1.0.20",
-  "description": "State management library [Black Edition]",
+  "version": "1.0.21",
+  "description": "State management library",
   "license": "MIT",
   "keywords": [
     "RxJS",
