--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,9 @@
         "./dist/actionstack/tools",
         "projects/actionstack/tools/src/public-api.ts"
       ],
-      "@actioncrew/actionstack/rx": [
-        "./dist/actionstack/rx",
-        "projects/actionstack/rx/src/public-api.ts"
+      "@actioncrew/actionstack/saga": [
+        "./dist/actionstack/saga",
+        "projects/actionstack/saga/src/public-api.ts"
       ]
     },
     "useDefineForClassFields": false,
