--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "redux-observable": "^3.0.0-rc.2",
     "redux-saga": "^1.3.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
