updated starter, now it lock every action within async action, next method used for such actions and not dispatch

--- a/projects/actionstack/package.json
+++ b/projects/actionstack/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@actioncrew/actionstack",
-  "version": "1.0.28",
-  "description": "State management library",
+  "version": "1.2.0",
+  "description": "Asynchronous state management library",
   "license": "MIT",
   "keywords": [
     "RxJS",
@@ -12,7 +12,8 @@
     "state management",
     "store",
     "minified",
-    "well-tuned"
+    "well-tuned",
+    "asynchronous"
   ],
   "peerDependencies": {
     "@angular/core": ">=14.0.0",
